App can now calculate days/weeks between dates.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <label class="">Start date</label><input class="form-control mb-3" id="dateStart" name="dateStart" type="date">
             </div>
             <div class="col">
-                <label class="">Number of Years</label><input class="form-control" id="numberOfYears" name="numberOfYears" type="number" step="1">
+                <label class="">Number of Years</label><input class="form-control" id="numberOfYears" name="numberOfYears" type="number" step="1" value="80">
             </div>
             <div class="col">
                 <label class="">Today's date</label><input class="form-control mb-3" id="dateToday" name="dateToday" type="date">
