App now runs an initial default setup using default values. Organized code, extracted code into methods and made code more readable.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     
         <!-- Visualizer -->
-        <h2 id="v-header" class="text-primary"></h2>
+        <h2 id="v-header" class=""></h2>
         <!-- <div id="v-container" class="d-inline-flex flex-wrap border border-dark p-1 mb-5"> -->
             <div class="text-wrap" id="v-cells"></div>
         <!-- </div> -->
