--- a/index.html
+++ b/index.html
@@ -36,13 +36,8 @@
     
         <!-- Visualizer -->
         <h2 id="v-header" class=""></h2>
-        <div id="v-container" class="d-inline-flex flex-wrap border border-dark p-1 mb-5">
-            <!-- <div class="text-wrap" id="v-cells"></div> -->
-            <!-- <div class="text-wrap" id="v-cells-dateStart"></div>
-            <div class="text-wrap" id="v-cells-dateToday"></div>
-            <div class="text-wrap" id="v-cells-dateEnd"></div> -->
+        <div id="v-container" class="col d-inline-flex flex-wrap text-wrap border border-primary p-1 mb-5">
         </div>
-
 
     </div>
     
